--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,10 @@ django-allauth==0.50.0
 gunicorn==20.1.0
 idna==3.3
 oauthlib==3.2.0
+postgres==4.0
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
+psycopg2-pool==1.1
 pycparser==2.21
 PyJWT==2.3.0
 python3-openid==3.2.0
