--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==4.0.3
 django-allauth==0.50.0
+django-paypal==2.0
 gunicorn==20.1.0
 idna==3.3
 oauthlib==3.2.0
@@ -17,6 +18,7 @@ psycopg2-pool==1.1
 pycparser==2.21
 PyJWT==2.3.0
 python3-openid==3.2.0
+pytz==2022.1
 requests==2.27.1
 requests-oauthlib==1.3.1
 sqlparse==0.4.2
